--- a/build.gradle
+++ b/build.gradle
@@ -13,33 +13,20 @@ repositories {
 }
 
 dependencies {
-	testCompile(
-		[group: 'junit', name: 'junit', version: '4.12'],
-		[group: 'com.jfoenix', name: 'jfoenix', version: '9.0.2'],
-		[group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
-		[group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
-		[group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1']
-	)
-	compile(
-		[group: 'junit', name: 'junit', version: '4.12'],
-		[group: 'com.jfoenix', name: 'jfoenix', version: '9.0.2'],
-		[group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
-		[group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
-		[group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1']
-	)
+    testCompile(
+            [group: 'junit', name: 'junit', version: '4.12'],
+            [group: 'com.jfoenix', name: 'jfoenix', version: '9.0.2'],
+            [group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
+            [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
+            [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1']
+    )
+    compile(
+            [group: 'junit', name: 'junit', version: '4.12'],
+            [group: 'com.jfoenix', name: 'jfoenix', version: '9.0.2'],
+            [group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
+            [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
+            [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
+            [group: 'com.google.zxing', name: 'core', version: '3.2.1']
+    )
 }
-
-/*
-jar {
-
-	manifest {
-		attributes 'Main-Class': 'controller.Main'
-	}
-	from configurations.runtime.collect { zipTree(it) }
-}
-
-task run(type: JavaExec) {
-	main = 'controller.Main'
-	classpath = sourceSets.main.runtimeClasspath
-}*/
 
