--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,11 @@ dependencies {
     )
 }
 
+jar {
+
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+    from configurations.runtime.collect { zipTree(it) }
+}
+
