--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'application'
+
+mainClassName = "controller.Main"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -10,32 +13,28 @@ repositories {
 }
 
 dependencies {
-	testCompile(
-		[group: 'junit', name: 'junit', version: '4.12'],
-		[group: 'com.jfoenix', name: 'jfoenix', version: '9.0.2'],
-		[group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
-		[group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
-		[group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1']
-	)
-	compile(
-		[group: 'junit', name: 'junit', version: '4.12'],
-		[group: 'com.jfoenix', name: 'jfoenix', version: '9.0.2'],
-		[group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
-		[group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
-		[group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1']
-	)
+    testCompile(
+            [group: 'junit', name: 'junit', version: '4.12'],
+            [group: 'com.jfoenix', name: 'jfoenix', version: '9.0.2'],
+            [group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
+            [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
+            [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1']
+    )
+    compile(
+            [group: 'junit', name: 'junit', version: '4.12'],
+            [group: 'com.jfoenix', name: 'jfoenix', version: '9.0.2'],
+            [group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
+            [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
+            [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
+            [group: 'com.google.zxing', name: 'core', version: '3.2.1']
+    )
 }
 
 jar {
 
-	manifest {
-		attributes 'Main-Class': 'path.to.your.main.class.here'
-	}
-	from configurations.runtime.collect { zipTree(it) }
-}
-
-task run(type: JavaExec) {
-	main = 'path.to.your.main.class.here'
-	classpath = sourceSets.main.runtimeClasspath
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+    from configurations.runtime.collect { zipTree(it) }
 }
 
