extend support for gluon (#38)

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ version = '1.0'
 
 repositories {
 	mavenCentral()
+    flatDir{
+        dirs 'lib'
+    }
 }
 
 dependencies {
@@ -26,7 +29,8 @@ dependencies {
             [group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
-            [group: 'com.google.zxing', name: 'core', version: '3.2.1']
+            [group: 'com.google.zxing', name: 'core', version: '3.2.1'],
+            fileTree(dir: 'lib', include: '*.jar')
     )
 }
 
@@ -38,3 +42,6 @@ jar {
     from configurations.runtime.collect { zipTree(it) }
 }
 
+task listJars << {
+    configurations.compile.each {File file -> println file.name}
+}
