--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -20,7 +20,7 @@ mark_completed_button=Mark completed
 service_title=Title
 service_description=Description
 service_request_button=Request service
-make_request_label=Create request
+make_request_label=Create Request
 service_type=Service type
 add_path=Add a path
 add_location=Add location
@@ -34,6 +34,7 @@ cafeteria=Cafeteria
 exit=Exit
 restroom=Restroom
 reception=Reception
+home=Home
 en=English
 ru=Russian
 language=Language
