--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -40,3 +40,9 @@ ru=Russian
 language=Language
 es=Spanish
 confirm=Confirm
+location_or_path=Location Or Path
+location_one=Location One
+location_two=Location Two
+add_edge=Add Path
+cancel_edge=Cancel
+delete_location=Delete Location
