--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ addons:
       - oracle-java8-installer
 
 before_install:
-  - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
+ - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
+ - chmod +x gradlew
 
 install: true
 
