--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             [group: 'com.google.zxing', name: 'core', version: '3.2.1'],
             fileTree(dir: 'lib', include: '*.jar'),
+            [group: 'joda-time', name: 'joda-time', version: '2.9.9'],
             [group: 'commons-codec', name: 'commons-codec', version: '1.11']
     )
 }
