--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -49,9 +49,16 @@ delete_location=Delete Location
 up=Up
 down=Down
 choose_floor=Choose Floor
-<<<<<<< HEAD
 information=Information
 department=Department
 find_nearest=Find Nearest
-=======
->>>>>>> 4f8061cacb4676a0e435ccd9069140157ac0a73b
+num_requests_report=Number of requests
+num_requests_unit=Number of request
+hours_unit=Hours
+average_time_report=Average time before fulfillment
+start_date=Start date
+end_date=End date
+start_time=Start time
+end_time=End time
+report_types=Report types
+go_button=Go
