--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -50,6 +50,7 @@ up=Up
 down=Down
 choose_floor=Choose Floor
 information=Information
+choose_path_algorithm=Choose Path Algorithm
 department=Department
 find_nearest=Find Nearest
 num_requests_report=Number of requests
@@ -62,3 +63,6 @@ start_time=Start time
 end_time=End time
 report_types=Report types
 go_button=Go
+a_star=AStar
+depth_first=Depth First
+breadth_first=Breadth First
