--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ newEdgeFile.csv
 newNodeFile.csv
 *.orig
 server/npm_modules/
+csv/mergedEdges_edited.csv
+csv/mergedNodes_edited.csv
+csv/users_edited.csv
+csv/newNodeFile.csv
+csv/newUsersFile.csv
