--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -63,6 +63,9 @@ start_time=Start time
 end_time=End time
 report_types=Report types
 go_button=Go
+chart=Chart
+table=Table
+report_instructions=Select one or more service types on the left (hold ctrl to select multiple), select a type of report in the upper left, and select your starting and ending dates and times and the report type on the right
 a_star=AStar
 depth_first=Depth First
 breadth_first=Breadth First
