Add all remaining translated strings (#87)
* Translate more strings

* Translate all remaining strings

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -42,7 +42,7 @@ mark_completed_button=Mark completed
 modify_map=Change map
 my_requests=My requests
 num_requests_report=Number of requests
-num_requests_unit=Number of request
+num_requests_unit=Number of requests
 password=Password
 quick_locations=Quick Locations
 reception=Reception
