--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -67,3 +67,9 @@ to_be_completed_label=To be completed:
 up=Up
 username=Username
 view_log=View log
+down=Down
+choose_floor=Choose Floor
+information=Information
+department=Department
+find_nearest=Find Nearest
+confirm_coord=Confirm
