New pathfind ui (#93)
* Pathfind ui is beginning to look nice

* Pathfind UI looks nice

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -73,3 +73,4 @@ information=Information
 department=Department
 find_nearest=Find Nearest
 confirm_coord=Confirm
+step_directions=Step-by-Step Directions
