--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -67,10 +67,6 @@ to_be_completed_label=To be completed:
 up=Up
 username=Username
 view_log=View log
-down=Down
-choose_floor=Choose Floor
-information=Information
-department=Department
-find_nearest=Find Nearest
 confirm_coord=Confirm
+location=location
 step_directions=Step-by-Step Directions
