Improved Web UI  (#132)
* web ui for showing directions

* web updates

* library fixes

* simply making web interface nicer

* web ui for showing directions

* web updates

* library fixes

* simply making web interface nicer

* improved Web ui

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
             [group: 'com.google.zxing', name: 'core', version: '3.2.1'],
             fileTree(dir: 'lib', include: '*.jar'),
             [group: 'joda-time', name: 'joda-time', version: '2.9.9'],
-            [group: 'commons-codec', name: 'commons-codec', version: '1.11']
+            [group: 'commons-codec', name: 'commons-codec', version: '1.11'],
     )
 }
 
@@ -78,6 +78,3 @@ jar {
     from configurations.runtime.collect { zipTree(it) }
 }
 
-task listJars << {
-    configurations.compile.each { File file -> println file.name }
-}
