--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,11 @@
   "author": "CS3733 Team S",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.0",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
-    "path": "^0.12.7"
+    "jquery": "^3.3.1",
+    "path": "^0.12.7",
+    "popper.js": "^1.14.3"
   }
 }
