--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -72,3 +72,6 @@ confirm_coord=Confirm
 location=location
 step_directions=Step-by-Step Directions
 dijkstras=Dijkstras
+next=Next
+previous=Previous
+step=Step
