--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -76,3 +76,5 @@ next=Next
 previous=Previous
 step=Step
 fulfiller_box=Fulfiller
+disable_location=disable location
+enable_location=enable location
