add user reports (#158)

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -76,5 +76,8 @@ next=Next
 previous=Previous
 step=Step
 fulfiller_box=Fulfiller
+num_fulfillable_requests=Number of fulfillable requests
+num_fulfilled_requests=Number of fulfilled requests
+avg_fulfill_time=Average fulfillment time
 disable_location=disable location
 enable_location=enable location
