--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -81,3 +81,4 @@ num_fulfilled_requests=Number of fulfilled requests
 avg_fulfill_time=Average fulfillment time
 disable_location=disable location
 enable_location=enable location
+pathfind_button=Navigate to request
