Admin timeout option (#167)
* Added admin ability to change timeout time

* removed println

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -81,6 +81,7 @@ num_fulfilled_requests=Number of fulfilled requests
 avg_fulfill_time=Average fulfillment time
 disable_location=disable location
 enable_location=enable location
+set=Set
 reports = Reports
 admin = Admin
 first_name= First Name
