Admin timeout option (#168)
* Added admin ability to change timeout time

* removed println

* fixed about page UI, and pathfinder ignores disables nodes

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -102,4 +102,5 @@ add_user = Add User
 delete_user = Delete User
 modify_user = Modify User
 pathfind_button=Navigate to request
+about_page=About
 
