--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -92,6 +92,7 @@ turn_right=Turn right
 turn_left=Turn left
 continue_straight=Continue straight
 enable_location=enable location
+pathfind_button=Navigate to request
 set=Set
 reports = Reports
 admin = Admin
@@ -103,4 +104,3 @@ delete_user = Delete User
 modify_user = Modify User
 pathfind_button=Navigate to request
 about_page=About
-
