--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -47,7 +47,7 @@ num_requests_unit=Number of requests
 password=Password
 quick_locations=Quick Locations
 reception=Reception
-report_instructions=Select one or more service types on the left (hold ctrl to select multiple), select a type of report in the upper left, and select your starting and ending dates and times and the report type on the right
+report_instructions=Select one or more categories on the left (hold ctrl to select multiple), select a type of report in the upper left, and select your starting and ending dates and times and the report type on the right
 report_types=Report types
 restroom=Restroom
 ru=Russian
