--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ derby.log
 newEdgeFile.csv
 newNodeFile.csv
 *.orig
-server/npm_modules/
+server/node_modules/
 csv/mergedEdges_edited.csv
 csv/mergedNodes_edited.csv
 csv/users_edited.csv
