Provide buttons for api (#179)

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -111,3 +111,5 @@ add_user = Add User
 delete_user = Delete User
 modify_user = Modify User
 about_page=About
+prescription_request=Make a Prescription Request
+it_request=Make an IT Request
