--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -85,12 +85,12 @@ to=to
 first_step_dirs=First, begin walking towards
 stairs_up=Use stairs or elevator to go up to floor 
 stairs_down=Use stairs or elevator to go down to floor 
-in=in
+in=In
 feet=feet
 destination_to=Destination is in
-turn_right=Turn right
-turn_left=Turn left
-continue_straight=Continue straight
+turn_right=turn right
+turn_left=turn left
+continue_straight=continue straight
 enable_location=enable location
 reports = Reports
 admin = Admin
@@ -102,14 +102,6 @@ delete_user = Delete User
 modify_user = Modify User
 pathfind_button=Navigate to request
 set=Set
-reports = Reports
-admin = Admin
-first_name= First Name
-last_name = Last Name
-type_of_user = Type of User
-add_user = Add User
-delete_user = Delete User
-modify_user = Modify User
 about_page=About
 prescription_request=Make a Prescription Request
 it_request=Make an IT Request
