--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
     flatDir {
         dirs 'lib'
     }
+    maven {
+        url "https://ravana.dyn.wpi.edu/maven"
+    }
 }
 
 // You'll need to create an integration-test folder with the same structure as your test or main folders
@@ -47,7 +50,9 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             "org.testfx:openjfx-monocle:8u76-b04", // jdk-9+181 for Java 9,
             "org.testfx:testfx-core:4.0.13-alpha",
-            "org.testfx:testfx-junit:4.0.13-alpha"
+            "org.testfx:testfx-junit:4.0.13-alpha",
+            [group: 'd18.teamR', name: 'Prescriptions', version: '1.0.0'],
+            [group: 'd18.teamS', name: 'ComputerService', version: '1.1.0']
     )
     compile(
             [group: 'junit', name: 'junit', version: '4.12'],
@@ -59,7 +64,9 @@ dependencies {
             fileTree(dir: 'lib', include: '*.jar'),
             [group: 'joda-time', name: 'joda-time', version: '2.9.9'],
             [group: 'commons-codec', name: 'commons-codec', version: '1.11'],
-            [group: 'com.twilio.sdk', name: 'twilio', version: '7.19.0']
+            [group: 'com.twilio.sdk', name: 'twilio', version: '7.19.0'],
+            [group: 'd18.teamR', name: 'Prescriptions', version: '1.0.0'],
+            [group: 'd18.teamS', name: 'ComputerService', version: '1.1.0']
     )
 }
 
