Adding service API buttons (#198)

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -107,4 +107,11 @@ prescription_request=Make a Prescription Request
 it_request=Make an IT Request
 map=View Map
 map_instructions=Click Anywhere to Pathfind
-text=
+special_request = Special Requests
+gift_request = Gift Request
+voice_recognition = Voice Recognition
+food_request = Food Request
+room_service = Room Service
+security_request = Security Request
+transportation_request = Transportation Request
+sanitation_request = Sanitation Request
