--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.3.1",
     "path": "^0.12.7",
     "popper.js": "^1.14.3",
+    "simple-hl7": "^2.2.0",
     "xml": "^1.0.1"
   }
 }
