--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,12 @@ dependencies {
             "org.testfx:testfx-core:4.0.13-alpha",
             "org.testfx:testfx-junit:4.0.13-alpha",
             [group: 'd18.teamR', name: 'Prescriptions', version: '1.0.0'],
-            [group: 'd18.teamS', name: 'ComputerService', version: '1.1.0']
+            [group: 'd18.teamS', name: 'ComputerService', version: '1.1.1'],
+            [group: 'd18.teamO', name: 'GiftShop', version: '1.0.2'],
+            [group: 'd18.teamF', name: 'VoiceRecognition', version: '1.1.0'],
+            [group: 'd18.teamQ', name: 'SanitationRequest', version: '1.0.0'],
+            [group: 'd18.teamP', name: 'TransportationRequest', version: '1.0.0'],
+            [group: 'b17.teamI', name: 'FoodRequest', version: '1.0.0']
     )
     compile(
             [group: 'junit', name: 'junit', version: '4.12'],
@@ -66,7 +71,12 @@ dependencies {
             [group: 'commons-codec', name: 'commons-codec', version: '1.11'],
             [group: 'com.twilio.sdk', name: 'twilio', version: '7.19.0'],
             [group: 'd18.teamR', name: 'Prescriptions', version: '1.0.0'],
-            [group: 'd18.teamS', name: 'ComputerService', version: '1.1.0']
+            [group: 'd18.teamS', name: 'ComputerService', version: '1.1.1'],
+            [group: 'd18.teamO', name: 'GiftShop', version: '1.0.2'],
+            [group: 'd18.teamF', name: 'VoiceRecognition', version: '1.1.0'],
+            [group: 'd18.teamQ', name: 'SanitationRequest', version: '1.0.0'],
+            [group: 'd18.teamP', name: 'TransportationRequest', version: '1.0.0'],
+            [group: 'b17.teamI', name: 'FoodRequest', version: '1.0.0']
     )
 }
 
