--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ dependencies {
             [group: 'org.apache.commons', name: 'commons-math3', version: '3.0'],
             [group: 'd18.teamD', name: 'AffineTransformation', version: '1.1.0'],
             [group: 'd18.teamS', name: 'ComputerService', version: '1.1.0']
+            [group: 'com.fazecast', name: 'jSerialComm', version: '2.0.2'],
 
     )
 }
