--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
     flatDir {
         dirs 'lib'
     }
+    maven {
+        url "https://ravana.dyn.wpi.edu/maven"
+    }
 }
 
 // You'll need to create an integration-test folder with the same structure as your test or main folders
@@ -59,7 +62,10 @@ dependencies {
             fileTree(dir: 'lib', include: '*.jar'),
             [group: 'joda-time', name: 'joda-time', version: '2.9.9'],
             [group: 'commons-codec', name: 'commons-codec', version: '1.11'],
-            [group: 'com.twilio.sdk', name: 'twilio', version: '7.19.0']
+            [group: 'com.twilio.sdk', name: 'twilio', version: '7.19.0'],
+            [group: 'com.fazecast', name: 'jSerialComm', version: '2.0.2'],
+            [group: 'd18.teamR', name: 'Prescriptions', version: '1.0.0']
+
     )
 }
 
