Home screen map (#203)
* new map pop-up for selecting where to go, just a placeholder map/button. Not functional

* you can choose destination from a new window, which invokes pathfinding. *Node: currently closes current scene before switching which may cause problems later

* integrated new map into the homescreen, pathfinds

* Fixed broken edge

* removed println

* added minimap to homescreen, fixed panning in map, can do simple zooming on map screen

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -115,3 +115,4 @@ room_service = Room Service
 security_request = Security Request
 transportation_request = Transportation Request
 sanitation_request = Sanitation Request
+use_map=Use Map
