Actually merged correctly. Added internationalization for buttons.

--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -113,3 +113,6 @@ voice_recognition = Voice
 security_request = Security
 transportation_request = Transport
 use_map=Use Map
+Back=Back
+Home=Home
+Credits=Credits
