--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,8 @@ dependencies {
             [group: 'd18.teamN', name: 'SecurityRequest', version: '1.0.0'],
             [group: 'org.apache.commons', name: 'commons-math3', version: '3.0'],
             [group: 'd18.teamD', name: 'AffineTransformation', version: '1.1.0'],
-            [group: 'd18.teamS', name: 'ComputerService', version: '1.1.0']
+            [group: 'd18.teamS', name: 'ComputerService', version: '1.1.0'],
+            [group: 'ca.uhn.hapi.fhir', name: 'hapi-fhir-structures-dstu3', version: '3.3.0']
 
     )
 }
