--- a/src/main/resources/all_text.properties
+++ b/src/main/resources/all_text.properties
@@ -113,6 +113,8 @@ voice_recognition = Voice
 security_request = Security
 transportation_request = Transport
 use_map=Use Map
+nurse = Nurse
 Back=Back
 Home=Home
 Credits=Credits
+
